[gd_scene load_steps=8 format=2]

[ext_resource path="res://3dekake.gd" type="Script" id=1]
[ext_resource path="res://SoundNovelText.tscn" type="PackedScene" id=2]
[ext_resource path="res://media/MPLUSRounded1c-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://media/yamamichi.png" type="Texture" id=4]
[ext_resource path="res://media/usagi1.png" type="Texture" id=5]
[ext_resource path="res://media/tanuki1.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 27
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="3dekake" type="Node2D"]
script = ExtResource( 1 )

[node name="pic" type="Node2D" parent="."]
modulate = Color( 0.65098, 0.65098, 0.65098, 1 )

[node name="yamamichi" type="Sprite" parent="pic"]
position = Vector2( 640, 360 )
texture = ExtResource( 4 )

[node name="usagi1" type="Sprite" parent="pic"]
visible = false
position = Vector2( 751.881, 363.922 )
scale = Vector2( -0.25, 0.25 )
texture = ExtResource( 5 )

[node name="tanuki1" type="Sprite" parent="pic"]
position = Vector2( 535, 579 )
texture = ExtResource( 6 )

[node name="SoundNovelText" parent="." instance=ExtResource( 2 )]

[node name="そして……" type="GridContainer" parent="."]
visible = false
margin_left = 80.0
margin_top = 80.0
margin_right = 495.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1茂みにかくれました。" type="Button" parent="そして……"]
margin_right = 415.0
margin_bottom = 45.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0, 0.572549, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.572549, 1, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
button_mask = 3
enabled_focus_mode = 0
text = "1.茂みにかくれました。"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2足が震えて動けませんでした。" type="Button" parent="そして……"]
margin_top = 49.0
margin_right = 415.0
margin_bottom = 94.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0, 0.572549, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.572549, 1, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
button_mask = 3
enabled_focus_mode = 0
text = "2.足が震えて動けませんでした。"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="そして……/1茂みにかくれました。" to="." method="_on_1_pressed"]
[connection signal="pressed" from="そして……/2足が震えて動けませんでした。" to="." method="_on_2_pressed"]
